things ready for to make the rectangle moving

--- a/MetalSlugDirectX.vcxproj
+++ b/MetalSlugDirectX.vcxproj
@@ -142,7 +142,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="DirectX9BackEnd.cpp" />
-    <ClCompile Include="MetalSlug.cpp" />
+    <ClCompile Include="GameCode\MetalSlug.cpp" />
     <ClCompile Include="SDL2BackEnd.cpp" />
     <ClCompile Include="SDL2PlatformMethodsCollection.cpp" />
     <ClCompile Include="Util.cpp" />
