--- a/MetalSlugDirectX.vcxproj.filters
+++ b/MetalSlugDirectX.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="SDL2Components.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameCode\CollisionChecker.cpp">
+      <Filter>Source Files\GameCode</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="TODO.txt" />
