separate the player into a class, still have a lot of bugs but overall things still running

--- a/MetalSlugDirectX.vcxproj
+++ b/MetalSlugDirectX.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="GameCode\CollisionChecker.cpp" />
     <ClCompile Include="GameCode\Hostage.cpp" />
     <ClCompile Include="GameCode\MetalSlug.cpp" />
+    <ClCompile Include="GameCode\Player.cpp" />
     <ClCompile Include="GameCode\Tinyc2CollisionChecker.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SDL2BackEnd.cpp" />
