--- a/MetalSlugDirectX.vcxproj.filters
+++ b/MetalSlugDirectX.vcxproj.filters
@@ -85,5 +85,8 @@
     <ClInclude Include="GameCode\Grenade.h">
       <Filter>Source Files\GameCode</Filter>
     </ClInclude>
+    <ClInclude Include="GameCode\Physics.h">
+      <Filter>Source Files\GameCode</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
