move player physic state machine to another class

--- a/MetalSlugDirectX.vcxproj.filters
+++ b/MetalSlugDirectX.vcxproj.filters
@@ -88,5 +88,8 @@
     <ClInclude Include="GameCode\Physics.h">
       <Filter>Source Files\GameCode</Filter>
     </ClInclude>
+    <ClInclude Include="GameCode\PlayerPhysic.h">
+      <Filter>Source Files\GameCode</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
