--- a/MetalSlugDirectX.vcxproj.filters
+++ b/MetalSlugDirectX.vcxproj.filters
@@ -94,5 +94,8 @@
     <ClInclude Include="GameCode\PlayerAnimation.h">
       <Filter>Source Files\GameCode</Filter>
     </ClInclude>
+    <ClInclude Include="GameCode\Bullet.h">
+      <Filter>Source Files\GameCode</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
